Wrapped up admin dadshboard and fixed a registration photo upload bug

--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -12,7 +12,16 @@ mat-card {
   max-width: none;
 }
 
+.double-height {
+  height: 680px;
+}
+
 table {
   width: 100%;
   max-width: none;
+}
+
+.username {
+  margin-top: 8px;
+  margin-left: 8px;
 }
